--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,21 @@ img{
 .centrar-texto {
     text-align: center;
 }
+
+
+/** headers **/
+
+.header {
+    background-image: url(../img/banner.jpg);
+    height: 60rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center; /*centra imagen de arriba hacia abajo */   
+}
+
+.header__texto{
+    text-align: center;
+    color: var(--blanco);
+    margin-top: 5rem;
+}
+
