--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,9 @@ body {
     max-width: 120rem;
     width: 90%;
     margin: 0 auto; /*centrar horizontalmente*/
-
 }
 
-a {
+a {
     text-decoration: none;
 }
 
@@ -89,3 +88,83 @@ img{
     margin-top: 5rem;
 }
 
+@media (min-width: 768px){
+    .header__texto{
+        margin-top: 15rem;
+    }
+}
+
+@media (min-width: 768px){
+    .barra{
+        display: flex; /*colocar uno frente al otro*/
+        justify-content: space-between;
+        align-items: center;
+
+    }
+}
+
+.logo{
+    color:var(--blanco);
+}
+
+.logo__nombre{
+    font-weight: 400;
+}
+
+.logo__bold{
+    font-weight: 700;
+}
+
+.navegacion__enlace{
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--blanco);
+}
+
+@media (min-width: 768px){
+    .navegacion {
+        display: flex;
+        gap: 2rem;
+    }
+}
+
+@media (min-width: 768px){
+    .contenido_principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
+}
+
+.entrada {
+    border-bottom: 1px solid gray;
+    margin-bottom: 2rem;
+}
+
+.entrada:last-of-type{ /*seleccionar el ultimo*/
+    border:none;
+    margin-bottom: 0;
+}
+
+.boton {
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px){
+    .boton{
+        display: inline-block;
+    }
+}
+
+.boton--primario{
+    background-color: var(--negro);
+}
