--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,9 @@ body {
 
 /* GLOBALES */
 .contenedor {
-    max-width: 120rem;
-    width: 90%;
+    /* max-width: 120rem;
+    width: 90%; texto no se va a las orillas */
+    width: min(90%, 120rem);
     margin: 0 auto; /*centrar horizontalmente*/
 }
 
@@ -38,6 +39,7 @@ h2,
 h3,
 h4 {
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 
 h1{
@@ -167,4 +169,55 @@ img{
 
 .boton--primario{
     background-color: var(--negro);
+}
+
+.boton--secundario{
+    background-color: var(--primario);
+}
+
+.cursos {
+    list-style: none;
+}
+.widget-curso{
+    border-bottom: 1px solid gray;
+    margin-bottom: 2rem;
+}
+
+.widget-curso:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+
+.widget-curso__label{
+    font-family: var(--fuenteHeading);
+    font-weight: 700;
+}
+
+.widget-curso__info{
+    font-weight: 400;
+}
+
+.widget-curso__label,
+.widget-curso__info{
+    font-size: 2rem;
+}
+
+.footer{
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem ;
+}
+
+.barra {
+    padding-top: 4rem;
+}
+
+/*sobre nosotros*/
+
+@media (min-width: 768px){
+    .sobre-nosotros{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+    }
 }
