--- a/css/style.css
+++ b/css/style.css
@@ -221,3 +221,71 @@ img{
         column-gap: 2rem;
     }
 }
+
+.curso{
+    padding: 3rem 0;
+    border-bottom: 1px solid grey;
+}
+
+.curso:last-of-type{
+    border: none;
+}
+
+@media (min-width: 768px){
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+
+
+.curso:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+
+.curso__label{
+    font-family: var(--fuenteHeading);
+    font-weight: 700;
+}
+
+.curso__info{
+    font-weight: 400;
+}
+
+.curso__label,
+.curso__info{
+    font-size: 2rem;
+}
+
+.contacto-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto ;
+    width: 95%;
+    padding: 5rem;
+}
+
+.campo{
+    display: flex;
+
+}
+
+.campo__label{
+    flex: 0 0 9rem;
+}
+
+.campo__field{
+    flex: 1;
+}
+
+.campo__field--textarea{
+
+}
